aws/cloudformation/provision_environment.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  TrustedIpRange:
    Type: String
    Description: CIDR block allowed to access EC2 and RDS
    Default: 69.181.107.147/32

  InstanceType:
    Type: String
    Default: t4g.nano

  DBInstanceType:
    Type: String
    Default: db.t4g.micro

  DBInstanceName:
    Type: String
    Default: erieiron-db-prod

  DBEngineVersion:
    Type: String
    Default: 17.2

  AllocatedStorage:
    Type: Number
    Default: 20

Description: Erie Iron env

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: RDS-VPC
        - Key: Project
          Value: ErieIron
        - Key: Environment
          Value: Dev

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: RDS-IGW

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: RDS-Public-RouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: RDS-Public-Subnet-1
        - Key: Project
          Value: ErieIron
        - Key: Environment
          Value: Dev

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [ 1, !GetAZs "" ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: RDS-Public-Subnet-2
        - Key: Project
          Value: ErieIron
        - Key: Environment
          Value: Dev

  SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  MyDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "Subnet group for RDS"
      SubnetIds:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: my-db-subnet-group
        - Key: Project
          Value: ErieIron
        - Key: Environment
          Value: Dev

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow PostgreSQL access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref MyEC2SecurityGroup
      Tags:
        - Key: Project
          Value: ErieIron
        - Key: Environment
          Value: Dev

  MyEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and outbound traffic for EC2
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref TrustedIpRange  # replace with your IP
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Project
          Value: ErieIron
        - Key: Environment
          Value: Dev

  MyRDSSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub "${AWS::StackName}-rds-secret"
      Description: RDS credentials
      GenerateSecretString:
        SecretStringTemplate: '{"username": "masteruser"}'
        GenerateStringKey: password
        PasswordLength: 16
        ExcludeCharacters: '"@/\'

  MyPostgresDB:
    Type: AWS::RDS::DBInstance
    DependsOn: MyRDSSecret
    Properties:
      DBInstanceClass: !Ref DBInstanceType
      Engine: postgres
      EngineVersion: !Ref DBEngineVersion
      AllocatedStorage: !Ref AllocatedStorage
      StorageType: gp3
      DBInstanceIdentifier: !Ref DBInstanceName
      MasterUsername: !Sub '{{resolve:secretsmanager:${MyRDSSecret}:SecretString:username}}'
      MasterUserPassword: !Sub '{{resolve:secretsmanager:${MyRDSSecret}:SecretString:password}}'
      VPCSecurityGroups:
        - !GetAtt MySecurityGroup.GroupId
      DBSubnetGroupName: !Ref MyDBSubnetGroup
      BackupRetentionPeriod: 0
      MultiAZ: false
      PubliclyAccessible: false
      DeletionProtection: false
      Tags:
        - Key: Name
          Value: !Ref DBInstanceName
        - Key: Project
          Value: ErieIron
        - Key: Environment
          Value: Dev
    DeletionPolicy: Snapshot

  MySecretRDSAttachment:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId: !Ref MyRDSSecret
      TargetId: !Ref MyPostgresDB
      TargetType: AWS::RDS::DBInstance

Outputs:
  DBEndpoint:
    Description: RDS endpoint
    Value: !GetAtt MyPostgresDB.Endpoint.Address

  VPCId:
    Description: VPC ID
    Value: !Ref VPC

  Subnet1:
    Description: Public Subnet 1 ID
    Value: !Ref PublicSubnet1

  Subnet2:
    Description: Public Subnet 2 ID
    Value: !Ref PublicSubnet2

  RDSSecretArn:
    Description: ARN of the generated RDS secret
    Value: !Ref MyRDSSecret

  DBPort:
    Description: Port number used by the RDS instance
    Value: 5432

  DBInstanceId:
    Description: Identifier of the RDS instance
    Value: !Ref MyPostgresDB

  SecretName:
    Description: Name of the RDS secret in Secrets Manager
    Value: !Ref MyRDSSecret
